<resources>
    <string name="app_name">بدي تكسي</string>
    <string name="facebook_app_id">239519243124403</string>
    <string name="fb_login_protocol_scheme">fb559552867587728</string>
    <string name="nameField">الاسم</string>
    <string name="phoneField">رقم الهاتف</string>
    <string name="goButton">ابدأ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main_">الصفحة الرئيسية</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">"الاعدادات "</string>
    <string name="title_activity_main">الصفحة الرئيسية</string>
    <string name="title_activity_cancel">الغاء الطلب</string>
    <string name="location_alert">يرجى تشغيل اعدادات الموقع لتتمكن من الاستفادة من خدمات بدي تكسي</string>
    <string name="unableLocation">الرجاء التأكد من تشغل تحديد الموقع</string>
    <string name="GPS_Setting">اعدادات الموقع</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="editProfile">المعلومات الشخصية</string>
    <string name="UserName">محمد</string>
    <string name="Confirm">تأكيد</string>
    <string name="FeedBack">الرجاء اعطائنا بعض الملاحظات</string>
    <string name="MoreFeed">للمزيد</string>
    <string name="CancelMain">لقد قمت بالغاء الطلب , هل يمكنك اخبارنا السبب ؟</string>
    <string name="Cancel1">وقت الوصول اكثر من المتوقع</string>
    <string name="Cancel2">غيرت رأيي</string>
    <string name="Cancel3">السائق لا يتحرك</string>
    <string name="Biddi">بدي تكسي</string>
    <string name="CarType">سكودا</string>
    <string name="Call">اتصال</string>
    <string name="FaceBook">التسجيل باستخدام فيسبوك</string>
    <string name="Mobile">التسجيل باستخدام رقم الهاتف</string>
    <string name="hint1">"هذه المعلومات ستعرض فقط للسائق "</string>
    <string name="emailField">البريد الالكتروني</string>
    <string name="termOfUsesField">بعد ضغطك على زر ابدأ تكون قد وافقت على شروط الاستخدام والخصوصية</string>
    <string name="Verify1">تم ارسال رمز التحقق الى</string>
    <string name="Verify2">الرجاء ادخال الرمز</string>
    <string name="ErorrCode">لم يتم ارسال الرمز ؟</string>
    <string name="Re">إعادة ارسال</string>
    <string name="Edit">تعديل</string>
    <string name="PickChoose">نقطة الالتقاء</string>
    <string name="History">طلباتي</string>
    <string name="Home">الرئيسية</string>
    <string name="support">الدعم</string>
    <string name="Notifications">الاشعارات</string>
    <string name="Dest">الوجهة</string>
    <string name="DestArt">الرجاء اختيار الوجهة</string>
    <string name="PickArt">الرجاء اختيار نقطة الالتقاء</string>
    <string name="DialogText">هل انت متأكد انك في</string>
    <string name="To">وتريد الذهاب الى</string>
    <string name="DoneBar">الغاء</string>
    <string name="FieldsEmpty">بعض الحقول فارغة</string>
    <string name="InValidEmail">البريد الالكتروني غير صحيح</string>
    <string name="InValidPhone">رقم الهاتف غير صحيح</string>
    <string name="NoInternet">لا يوجد اتصال بالانترنت</string>
    <string name="PhoneNumberConfirmation">هل انت متاكد ان هذا رقم هاتفك </string>

    <string name="Loading">تحميل ...</string>
    <string name="Wait">االرجاء الانتظار ...</string>
    <string name="Error">حدث خطأ , يرجى المحاولة بعد قليل</string>


    <string name="osmbonuspack.directions.1">Continue[ on %s]</string>
    <string name="osmbonuspack.directions.6">Turn slight right[ on %s]</string>
    <string name="osmbonuspack.directions.7">Turn right[ on %s]</string>
    <string name="osmbonuspack.directions.8">Turn sharp right[ on %s]</string>
    <string name="osmbonuspack.directions.12">U-Turn[ on %s]</string>
    <string name="osmbonuspack.directions.5">Turn sharp left[ on %s]</string>
    <string name="osmbonuspack.directions.4">Turn left[ on %s]</string>
    <string name="osmbonuspack.directions.3">Turn slight left[ on %s]</string>
    <string name="osmbonuspack.directions.24">You have reached a waypoint of your trip</string>
    <string name="osmbonuspack.directions.2">[Go on %s]</string>
    <string name="osmbonuspack.directions.27">Enter roundabout and leave at first exit[ on %s]</string>
    <string name="osmbonuspack.directions.28">Enter roundabout and leave at second exit[ on %s]</string>
    <string name="osmbonuspack.directions.29">Enter roundabout and leave at third exit[ on %s]</string>
    <string name="osmbonuspack.directions.30">Enter roundabout and leave at fourth exit[ on %s]</string>
    <string name="osmbonuspack.directions.31">Enter roundabout and leave at fifth exit[ on %s]</string>
    <string name="osmbonuspack.directions.32">Enter roundabout and leave at sixth exit[ on %s]</string>
    <string name="osmbonuspack.directions.33">Enter roundabout and leave at seventh exit[ on %s]</string>
    <string name="osmbonuspack.directions.34">Enter roundabout and leave at eighth exit[ on %s]</string>
    <string name="osmbonuspack.directions.17">Take the ramp on the left[ on %s]</string>
    <string name="osmbonuspack.directions.18">Take the ramp on the right[ on %s]</string>
    <string name="osmbonuspack.directions.19">Take the ramp straight ahead[ on %s]</string>

    <string name="osmbonuspack.format_distance_kilometers">%skm</string>
    <string name="osmbonuspack.format_distance_meters">%sm</string>

    <string name="osmbonuspack.format_hours">%sh</string>
    <string name="osmbonuspack.format_minutes">%smin</string>
    <string name="osmbonuspack.format_seconds">%ssec</string>
    <string name="step">Step</string>


    <string name="unknwon">غير محدد</string>
    <string name="Xlarge_7">XL 7 مقاعد</string>
    <string name="Large_4">L 4 مقاعد</string>
    <string name="M_4">4 مقاعد</string>
    <string name="ChooseOffice">مكتب</string>
    <string name="Cancel">الغاء</string>
    <string name="setting">الاعدادات</string>
    <string name="drivercancel">السائق قام بإلغاء الطلب</string>
    <string name="usercancel">هل انت متأكد من إلغاء الطلب</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="currentposition">موقعك الحالي</string>
    <string name="internetproblem">الرجاء فحص الاتصال بالانترنت</string>
    <string name="taxilocation">موقع التكسي</string>
    <string name="Thanks">شكرا لاستخدامك تطبيق بدي تكسي</string>
    <string name="sorry">نأسف</string>
    <string name="sorrymessage">لا يوجد تكسي متوافر في هذه اللحظة , يرجى المحاولة بعد قليل</string>
    <string name="Ok">موافق</string>
    <string name="notify">تنبيه بالوصول</string>
    <string name="arraival">التكسي الذي قمت بطلبه قد وصل الى المكان المحدد</string>
    <string name="title_location_permission">بحاجة الى إذن الموقع</string>
    <string name="text_location_permission">هذا التطبيق بحاجة الى إذن الموقع,الرجاء الموافقة للاستخدام التطبيق</string>
    <string name="ok">موافق</string>
    <string name="all_offices">جميع المكاتب</string>
    <string name="google_API">AIzaSyBSjdW8Fupi2Lg90c1K_YjYKIf4BIXQTJs</string>
    <string name="cancelOrder">تم إلغاء الطلب</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="noteConfirm">اسم اخر لنقطة الالتقاء / ملاحظات للسائق</string>
    <string name="loading">الرجاء الانتظار ..</string>
    <string name="loadingMessage">يتم البحث عن اقرب تكسي ....</string>
    <string name="maplocation">الموقع المشار اليه على الخارطة</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">دقيقة</string>
    <string name="distance">كم</string>
    <string name="ArrivalMessageText">السائق قد وصل الى نقطة الالتقاء</string>
    <string name="userChoice">قمت بتوجيه السائق</string>
    <string name="pickChoice">ضمن الخارطة</string>
    <string name="profilebutton">تعديل</string>
    <string name="imageSelectionError">الملف الذي قمت بتحميله ليس صورة</string>
    <string name="pathError">الرجاء اختيار ملف اخر</string>
    <string name="historyEmpty">لا يوجد لديك طلبات سابقة</string>
    <string name="cancelDone">تم إلغاء الطلب بنجاح</string>
    <string name="blocked">يبدو انك قمت بعد محاولات غير صحيحة لطلب تكسي، تم تقييد وصولك لبعض الوقت لغرض جودة الخدمة، نأسف لذلك</string>
    <string name="searchontaxi">جاري البحث عن تكسي بالقرب منك</string>
    <string name="durationtext">دقيقة</string>
    <string name="language">اللغة</string>
    <string name="en">الانجليزية</string>
    <string name="ar">العربية</string>
    <string name="usingEnglish">انت تستخدم اللغة الانجليزية حاليا</string>
    <string name="usingArabic">انت تستخدم اللفة العربية حاليا</string>
    <string name="cancel">الغاء</string>
    <string name="mins">دقائق</string>
    <string name="unavilable">غير متوفر</string>









</resources>
