<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_cancel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bedetaxi.bedetaxi.cancel"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/CancelMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:layout_marginTop="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            android:textColor="#3982bf" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:weightSum="3"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/Cancel1"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshap"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:id="@+id/option1" />

        <Button
            android:text="@string/Cancel2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshap"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:id="@+id/option2" />

        <Button
            android:text="@string/Cancel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:background="@drawable/buttonshap"
            android:id="@+id/option3" />
    </LinearLayout>
</RelativeLayout>
