<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B3000000"
    android:clickable="true"
    android:fillViewport="true"
    tools:context="com.bedetaxi.bedetaxi.RegistertionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/nameTextFields"
            android:hint="@string/nameField"
            android:enabled="true"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/edittext_style"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"

            android:layout_above="@+id/emailTextField"
            android:layout_marginBottom="10dp"
            android:textColorHint="#80000000" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/emailTextField"
            android:hint="@string/emailField"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:enabled="true"
            android:background="@drawable/edittext_style"
            android:textStyle="bold"
            android:layout_above="@+id/editText3"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColorHint="#80000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">
            <EditText
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:id="@+id/editText3"
                android:text="+972"
                android:enabled="false"
                android:layout_alignTop="@+id/phoneTextField"
                android:background="@drawable/edittext_style"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:textColorHint="#80000000"
                android:layout_weight="1"
                android:paddingStart="9dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:id="@+id/phoneTextField"
                android:hint="@string/phoneField"
                android:background="@drawable/edittext_style"
                android:phoneNumber="true"
                android:textStyle="bold"
                android:layout_above="@+id/textView"
                android:layout_toEndOf="@+id/editText3"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginBottom="15dp"
                android:textColorHint="#80000000"
                android:layout_weight="4"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goButton"
            android:id="@+id/goButton"
            android:onClick="goButtonClicked"
            android:background="#FFCD00"
            android:textStyle="bold"
            android:textSize="20sp"

            android:layout_above="@+id/textView2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/termOfUsesField"
            android:id="@+id/Privacy"
            android:background="@drawable/edittext_style"
            android:textColor="#0077C8"
            android:paddingLeft="4dp"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_above="@+id/goButton"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="29dp"
            android:clickable="true"
            />


    </LinearLayout>


</ScrollView>
