<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#B3000000"
    android:fillViewport="true"

    android:clickable="true"
    tools:context="com.bedetaxi.bedetaxi.VerificationFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="#ffda02"
        android:id="@+id/linear1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="100dp">

        <TextView
            android:text="@string/Verify1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="16sp"

            android:paddingTop="10dp"
            android:id="@+id/textView7" />

        <TextView
            android:text="0599319499"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:id="@+id/textView6" />

        <TextView
            android:text="@string/Verify2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="16sp"
            android:textColor="#000"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:paddingBottom="10dp"
            android:id="@+id/textView5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:weightSum="4"
        android:id="@+id/linear2"
        android:layout_below="@+id/linear1"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp">

        <EditText
            android:layout_width="35dp"
            android:layout_height="38dp"
            android:id="@+id/first"
            android:inputType="number"
            android:textSize="20sp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:maxLength="1"
            android:background="@drawable/edittext_style"
            android:textAlignment="center"
            android:textColorHint="#000"/>

        <EditText
            android:background="@drawable/edittext_style"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:id="@+id/second"
            android:textSize="20sp"
            android:inputType="number"
            android:maxLength="1"
            android:layout_marginRight="5dp"
            android:textAlignment="center"
            android:textColorHint="#000"
            android:layout_marginLeft="5dp" />

        <EditText
            android:inputType="number"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:id="@+id/third"
            android:textSize="20sp"
            android:background="@drawable/edittext_style"
            android:layout_marginRight="5dp"
            android:maxLength="1"
            android:textAlignment="center"
            android:textColorHint="#000"
            android:layout_marginLeft="5dp" />

        <EditText
            android:background="@drawable/edittext_style"
            android:layout_marginRight="5dp"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:id="@+id/fourth"
            android:inputType="number"
            android:textSize="20sp"
            android:maxLength="1"
            android:textAlignment="center"
            android:textColorHint="#000"
            android:layout_marginLeft="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:layout_marginBottom="40dp"
        android:gravity="center|bottom"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/ErorrCode"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/textView13"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:textColor="#2467aa"
android:textAlignment="center"
            android:layout_weight="2" />

        <Button
            android:text="@string/Re"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resend"
            android:background="#ffda02"
            android:layout_weight="1"
            android:textAlignment="center"/>

    </LinearLayout>
</LinearLayout>

</ScrollView>
