<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#CCFFFFFF"
    android:clickable="true"
    android:fillViewport="true"
    tools:context=".Confirm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="2"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/linearborder"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="2dp"
                    android:layout_weight="1"
                    android:weightSum="2">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/pickpic"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/PickChoose"
                        android:layout_weight="1"
                        android:id="@+id/textView4" />


                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/From"
                    android:paddingTop="10dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="25dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="15sp"/>


            </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/linearborder"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:weightSum="3">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:weightSum="2">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/dest"


                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/Dest"
                        android:layout_weight="1"/>



                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="10dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:layout_weight="2"
                    android:id="@+id/To" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:background="@drawable/linearborder"
            android:paddingTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight=".7">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:layout_weight=".5"
                android:weightSum="2">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/office"
                    android:layout_marginTop="4dp"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/ChooseOffice"
                    android:textSize="13sp"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    />

            </LinearLayout>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/officeSpinner"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:drawSelectorOnTop="true"
                android:textAlignment="center"
                android:layout_weight="1.5"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:clickable="false">

            </LinearLayout>



        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".7"
            android:textColor="#4b4b4c"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/linearborder"
            android:hint="@string/noteConfirm"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"

            android:weightSum="2">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:id="@+id/ConfirmOffice"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_weight="1"
                android:text="@string/Confirm"
                android:clickable="true"

                android:background="@drawable/buttonshap" />

            <Button
                android:id="@+id/cancelConfirm"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="#FFF"
                android:layout_marginTop="10dp"
                android:text="@string/Cancel"
                android:background="@drawable/cancel_button"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
